Fixed alignment

--- a/web/stylesheet/common/_textfield.scss
+++ b/web/stylesheet/common/_textfield.scss
@@ -10,6 +10,10 @@ $trans-time: 300ms;
   font-size: 12px;
   margin-top: -9px;
 }
+.pftp-textfield-container {
+  width: 100%;
+}
+
 .pftp-textfield {
   display: flex;
   align-items: center;
